@@ -1084,10 +1084,9 @@ static bool _process_setplugname(Device* dev, Action *act, ExecCtx *e)
                 if (plug->name)                 /* free old plug name */
                     Free(plug->name);
                 plug->name = Strdup(plug_name); /* store new plug name */
-                /*printf("XXX setplugname %s: setting to %s\n", 
-                    plug->node, plug->name);*/
             } else {
-                /*printf("XXX setplugname %s: not found\n", node_name);*/
+                err(FALSE, "_process_setplugname(%s): node %s: not found\n", 
+                        dev->name, node_name);
             }
             Free(plug_name);
         }
